# NetContSecurity-Project-LHCGC-2026

./: .env.example  .gitignore  Architecture.mmd  README.md  SECURITY.md  pyproject.toml  verify_all.py
data/: README.md
data/processed/: README.md
data/sample/: behavior_features_sample.csv  dataset_stats.example.json  dataset_v1_sample.csv  text_samples_sample.csv
document/: Day1-ABC开发组接口与任务规格.md  Day2-A给B数据格式交接说明.md  Day2-B图像预处理进度说明.md  Day3-A文本与行为进度说明.md  Day3-B图像特征提取预备说明.md  Day4-B图像特征生成进度说明.md  Day5-B多模态融合任务说明.md  Day6-B消融实验准备说明.md  Day7交接包说明.md  [Google-Gemini]网络安全研究分工参考.md  error_case_summary.md  git指南.md  人员分工参考Team-Responsibility-Reference.md  开发组协作指南.md  开发组协作流程-流程图.mmd  开发组协作流程.md  开发组协作流程.mmd  开发组角色选择说明.md  成员A数据与文本模型指南Member-A-Data-Text-Guide.md  成员B图像与多模态融合指南Member-B-Image-Fusion-Guide.md  成员C系统集成与评测指南Member-C-Integration-Evaluation-Guide.md  成员D报告撰写指南Member-D-Report-Writing-Guide.md  成员EPPT与答辩指南Member-E-Slides-Defense-Guide.md  网络内容安全任务概述.md  项目入手指南.md
document/DE交接区/: 01项目总览与答辩主线.md  02数据字段到模型输入.md  03模型方法与多模态融合.md  04实验结果与图表解读.md  05报告和PPT写作包.md  06答辩问答表.md  DE字段到特征流程.mmd  DE实验评估流程.mmd  DE模型融合流程.mmd  DE项目总流程.mmd  README.md  给DE同学的第一步起始指导.md
outputs/demo/: README.md  ablation_metrics.csv  ablation_summary.csv
outputs/metrics/: experiment_log_template.csv
src/: evaluate.py  extract_behavior_features.py  extract_image_features.py  extract_resnet_features.py  extract_text_features.py  prepare_data.py  run_ablation.py  train_fusion.py  train_text_baseline.py
