[project]
name = "netcontsecurity-project-lhcgc-2026"
version = "0.1.0"
description = "Multimodal social network content risk control and anomaly detection coursework project"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.11,<2.12",
    "torchvision>=0.26,<0.27",
    "tqdm>=4.67.3",
    "transformers>=5.10.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
